--- a/index.html
+++ b/index.html
@@ -1,48 +1,49 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-    <head>
-      <title>Something 64</title>
-      <link rel="stylesheet" href="style.css">
-    </head>
-   
-    <body>
-        <!-- All content goes here-->
-        <div id="all contents">
-            <h2>Jonathan Cueva</h2>
-            <p>Student at IHSNO
-                <!-- Interest section-->
-                 <div id="interests">
-                    <h3>Interests</h3>
-                    <ul>
-                        <li>Music</li>
-                        <li>TV Shows</li>
-                        <li>Video Games</li>
-                    </ul>
-                 </div>
-            </p>
-            <nav>
-                <h1>Something 64</h1>
-                <ul id="nav-ul">
-                    <li class="nav-li">
-                        <a href="index.html"> Home </a>
-                    </li>
-                    <li class="nav-li">
-                        <a href="portfolio.html"> Portfolio</a>
-                    </li>
-                </ul>
-            </nav>
+  <head>
+    <title>Something 64</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-            <main>
-                <!-- Sidebar section-->
-                <div class="sidebar">
-                    <img class="sidebar-img" src="https://www.eatingwell.com/thmb/oHvDTS4pq63C9uF1YK03SEpdSrU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/gettyimages-1124303516-36413b5bf61f45f1b7d18d90000b56b7.jpg">
-                </div>
+  <body>
+    <!-- All content goes here-->
+    <div id="all-contents">
+      <nav>
+        <h1>Something 64</h1>
+        <ul id="nav-ul">
+          <li class="nav-li">
+            <a href="index.html"> Home </a>
+          </li>
+          <li class="nav-li">
+            <a href="portfolio.html"> Portfolio</a>
+          </li>
+        </ul>
+      </nav>
 
-                <!-- Content section -->
-                <div class="content">
-
-                </div>
-            </main>
+      <main>
+        <!-- Sidebar section-->
+        <div class="sidebar">
+          <img
+            class="sidebar-img"
+            src="https://www.eatingwell.com/thmb/oHvDTS4pq63C9uF1YK03SEpdSrU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/gettyimages-1124303516-36413b5bf61f45f1b7d18d90000b56b7.jpg"
+          />
         </div>
-    </body>
+
+        <!-- Content section -->
+        <div class="content">
+          <h2>Jonathan Cueva</h2>
+          <p>Student at IHSNO</p>
+          <!-- Interest section-->
+          <div id="interests">
+            <h3>Interests</h3>
+            <ul>
+              <li>Music</li>
+              <li>TV Shows</li>
+              <li>Video Games</li>
+            </ul>
+          </div>
+        </div>
+      </main>
+    </div>
+  </body>
 </html>
