--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -9,7 +9,7 @@
 		.box {
 			width: 70px;
 			height: 70px;
-			background-color: teal;
+			background-color: red;
 			font-size: 300%;
 			text-align: center;
 			user-select: none;
@@ -67,7 +67,9 @@
 
 			// TODO 2 - Variable declarations 
 
-
+			var positionX = 10;
+			var points = 0;
+			var speed = 10;
 
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -75,8 +77,15 @@
 			turn it around! 
 			*/
 			function update() {
-
-
+				moveBoxTo(300);
+				moveBoxTo(positionX);
+				positionX = positionX + speed;
+				if (positionX > boardWidth) {
+					speed = speed * -1;
+				}
+				else if (positionX < 0){
+					speed *= -1;
+				}
 			};
 
 			/* 
@@ -84,9 +93,11 @@
 			it should increase the points total, increase the speed, and move the box to
 			the left side of the screen.
 			*/
-			function handleBoxClick() {
-
-
+			function handleBoxClick(positionX = 0) {
+				speed = 3 * points + 10;
+				points = points + 1;
+				changeBoxText(points);
+				
 			};
 
 
